staff page paragraph overflow on smaler screens fixed

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -569,7 +569,7 @@ footer {
     text-align: center;
     border: solid 2px #fff;
     border-radius: 5px;
-    min-height: 75vh;
+    height: auto;
 }
 
 
@@ -600,7 +600,7 @@ footer {
 
 .teacher-description {
     font-size: 1.5rem;
-    min-height: 35%;
+    min-height: 30%;
     width: 100%;
     padding: 1%;
     margin: 0 auto;
@@ -769,8 +769,12 @@ footer {
         margin: 5% auto;
     }
 
-    .teacher-container {
-        height: auto;
+    /* .teacher-container {
+        min-height: 100%;
+    } */
+
+    .teacher-description {
+        height: 40vh;
     }
 
     .staff-header {
